--- a/public/post_test.html
+++ b/public/post_test.html
@@ -3,15 +3,15 @@
 <head>
     <link rel="stylesheet" href="./style.css">
     <title>Actix Web</title>
-    <script type="text/javascript" src="./jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
     <script>
         function sbmit () {
             $.ajax({
                 type: "POST",
-                url: "/extrapolar",
+                url: "/somepost",
                 data: {
-                    cc1: $('#cc1').val(),
-                    cc2: $('#cc2').val()
+                    cc1: $('#field_1').val(),
+                    cc2: $('#field_2').val()
                 },
                 success: function (data) {
                     if (data.redirect) {
@@ -26,10 +26,10 @@
 </head>
 <body class="content">
     <div>
-        <h1>Extrapolador</h1>
-        <label for='cc1'>CC 1: </label><input type='text' id='cc1' value='' maxlength="16"><br/>
-        <label for='cc2'>CC 2: </label><input type='text' id='cc2' value='' maxlength="16"><br/><br/>
-        <label id='generar-extra' onclick="sbmit()">Generate</label><br/><br/>
+        <h1>Form Example</h1>
+        <label for='field_1'>Field 1: </label><input type='text' id="field_1" value='' maxlength="16"><br/>
+        <label for='field_2'>Field 2: </label><input type='text' id="field_2" value='' maxlength="16"><br/><br/>
+        <label onclick="sbmit()">Submit</label><br/><br/>
         <p id='r'> </p>
     </div>
 </body>
